# easy_dwpose

./: .gitattributes  .gitignore  README.md  pyproject.toml
easy_dwpose/: dwpose.py
easy_dwpose/body_estimation/: wholebody.py
easy_dwpose/draw/: mimic_motion.py  musepose.py
scripts/: inference_on_folder.py  inference_on_video.py
tests/: test_dwpose_class.py
